--- a/config/config-local.yml
+++ b/config/config-local.yml
@@ -1,10 +1,18 @@
 server:
   default:
-    Port: 8088
-    ReadTimeout: 30
-    WriteTimeout: 30
-    IdleTimeout: 90
-    MaxHeaderBytes: 1048576
+    port: 8088
+    readTimeout: 30
+    writeTimeout: 30
+    idleTimeout: 90
+    maxHeaderBytes: 1048576
 
 logger:
   level: info
+
+database:
+  mongo:
+    host: test
+    port: test
+    name: test
+    username: test
+    password: test
